--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
+appdirs==1.4.4
+bcrypt==3.1.7
+cffi==1.14.1
+click==7.1.2
+DateTime==4.3
+distlib==0.3.1
+filelock==3.0.12
 Flask==1.1.2
-requests==2.23.0
-
-#TODO: atualizar
+ibm-db==3.0.2
+ibm-db-sa==0.3.5
+importlib-metadata==1.7.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+pycparser==2.20
+pytz==2020.1
+six==1.15.0
+SQLAlchemy==1.3.18
+validate-email==1.3
+virtualenv==20.0.29
+virtualenvwrapper-win==1.2.6
+Werkzeug==1.0.1
+zipp==3.1.0
+zope.interface==5.1.0
